--- a/Statistical Data Analyses.Rmd
+++ b/Statistical Data Analyses.Rmd
@@ -19,6 +19,7 @@ library(Matrix)
 library(lme4)
 library(wesanderson)
 library(viridis)
+library(tidyverse)
 
 options(scipen=5, digits = 5)
 ```
@@ -28,8 +29,8 @@ options(scipen=5, digits = 5)
 # Reading the file:
 # dir <- "C:/Users/Merav/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
 # dir <- "C:/Users/edena/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
-dir<-"C:/Users/Shahar/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
-    
+# dir<-"C:/Users/Shahar/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
+dir <- "C:/Users/shahars/OneDrive - Playtika Ltd/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_22.2.23.xlsx"
 df <- read_excel(dir, sheet = 1)
 df <- df %>% mutate(DOB = as.Date(DOB)) 
 
@@ -177,20 +178,20 @@ tablelist2 <- mapply(table, exp_var2)
 
 covid_time_prop <- round(tablelist1[['covid_time']] / sum(tablelist1[['covid_time']]),2)
 
-boxplot(number_of_children, is_atopic_first_year)
+# boxplot(number_of_children, is_atopic_first_year)
 
-# EDEN 
-table(covid_time)
-
-covid_time_prop
-
-table(covid_time,is_atopic_first_year)
-
-table(covid_time,is_atopic_second_year)
-
-summary(number_of_children)
-
-table(number_of_children, sibling_Atopic_diseases)
+# # EDEN 
+# table(covid_time)
+# 
+# covid_time_prop
+# 
+# table(covid_time,is_atopic_first_year)
+# 
+# table(covid_time,is_atopic_second_year)
+# 
+# summary(number_of_children)
+# 
+# table(number_of_children, sibling_Atopic_diseases)
 ```
 
 מספר תצפיות = 1579
@@ -275,6 +276,7 @@ chisq_goodness <- function(kpi){
 ```
 
 
+
 # Regression 
 
 ## Logistic regression
@@ -286,29 +288,20 @@ mdl1 <- glm(is_atopic_first_year ~ SES_group + gender + type_of_pregnancy +
                mother_Atopic_diseases + father_Atopic_diseases +
                mother_year_birth + mother_education + number_of_children + covid_time  , data = df_mdl, family = "binomial")
 
-# mdl1_sib <- glm(is_atopic_first_year ~ SES_group + gender + type_of_pregnancy +
-#                mother_Atopic_diseases + father_Atopic_diseases + sibling_Atopic_diseases + 
-#                mother_year_birth + mother_education + number_of_children + covid_time  , data = df_mdl, family = "binomial")
-
 mdl2 <- glm(is_atopic_second_year ~ SES_group + gender + 
              mother_Atopic_diseases + father_Atopic_diseases +
              mother_year_birth + mother_education + number_of_children + 
              type_of_pregnancy  + vaccine_12mo  + nursing_setup_at_12mo + covid_time, data=df_mdl, family='binomial')
 
-# mdl2_sib <- glm(is_atopic_second_year ~ SES_group + gender + 
-#              mother_Atopic_diseases + father_Atopic_diseases + sibling_Atopic_diseases + 
-#              mother_year_birth + mother_education + number_of_children + 
-#              type_of_pregnancy  + vaccine_12mo  + nursing_setup_at_12mo + covid_time, data=df_mdl, family='binomial')
- 
-
 df_mdl$mdl1 <- predict(mdl1)
-# df_mdl$mdl1_sib <- mdl1_sib$fitted.values
 df_mdl$mdl2 <- predict(mdl2)
-# df_mdl$mdl2_sib <- mdl2_sib$fitted.values
 
 df_group <- df_mdl %>% group_by(covid_time) %>% summarise(mdl1_avg = mean(mdl1, na.rm=T),  
                                                           mdl2_avg = mean(mdl2, na.rm=T))
 df_mdl <- left_join(df_mdl, df_group, by = 'covid_time')
+
+summary(mdl1)
+
 ```
 
 
@@ -319,24 +312,34 @@ gam1 <- gam(is_atopic_first_year ~ SES_group + gender + type_of_pregnancy +
                mother_year_birth + mother_education + number_of_children +
                s(DOB_count, bs='cr') ,data=df_mdl, family=binomial)
 
-# gam1_sib <- gam(is_atopic_first_year~ SES_group + gender + type_of_pregnancy + 
-#              mother_Atopic_diseases + father_Atopic_diseases + sibling_Atopic_diseases+
-#              mother_year_birth + mother_education + number_of_children + 
-#              s(DOB_count, bs='cr') ,data=df_mdl, family=binomial)
-
-gam2 <- gam(is_atopic_second_year~ SES_group + gender + 
+gam2 <- gam(is_atopic_second_year ~ SES_group + gender + 
              mother_Atopic_diseases + father_Atopic_diseases +
              mother_year_birth + mother_education + number_of_children + 
              type_of_pregnancy  + vaccine_12mo  + nursing_setup_at_12mo + s(DOB_count, bs='cr') ,data=df_mdl, family=binomial)
 
-# gam2_sib <- gam(is_atopic_second_year~ SES_group + gender + 
-#              mother_Atopic_diseases + father_Atopic_diseases + sibling_Atopic_diseases +
-#              mother_year_birth + mother_education + number_of_children + 
-#              type_of_pregnancy  + vaccine_12mo  + nursing_setup_at_12mo + s(DOB_count, bs='cr') ,data=df_mdl, family=binomial)
-df_mdl$gam1 <- predict(gam1)
-# df_mdl$gam1_sib <- gam1_sib
-df_mdl$gam2 <- predict(gam2)
-# df_mdl$gam2_sib <- gam2_sib
+df_mdl$gam1 <- predict.gam(gam1)
+df_mdl$gam2 <- predict.gam(gam2)
+
+
+summary.gam(gam1)
+```
+
+```{r}
+summary.gam(gam1)
+p_gam1 <- plot.gam(gam1, ylab = 'Beta', xlab = 'date point')[[1]]
+
+# length(p_gam1$fit)
+# df_mdl$p_gam1 <- p_gam1$fit
+```
+
+```{r}
+library(voxel)
+library(lmerTest)
+
+plot(gam1)
+p <- plotGAM(gam1, smooth.cov = 'DOB_count') 
+
+p$data
 ```
 
 ## Create Graphs 
@@ -348,50 +351,27 @@ ggplot(df_mdl, aes(DOB, gam1)) + geom_smooth(aes(col = covid_time)) + geom_line(
   design + labs(title = 'Atopic disease risk for babies up to one year old by DOB', x = 'Date of Birth', y = 'Atopic disease probability') +
   scale_color_manual(values=viridis(4), name = "Born at", labels =c('Up to March19','March19 - March20','March20 - Feb21', 'From Feb21' ))
 
-# # First year - With Sibilings
-# ggplot(df_mdl, aes(DOB, gam1_sib)) + geom_smooth(aes(col = covid_time)) + geom_line(aes(DOB, mdl1_sib_avg, col = covid_time)) + 
-#   design + labs(title = 'Atopic disease risk for babies up to one year old by DOB - WITH SIBILINGS', x = 'Date of Birth', y = 'Atopic disease probability') +
-#   scale_color_manual(values=viridis(4), name = "Born at", labels =c('Up to March19','March19 - March20','March20 - Feb21', 'From Feb21' ))+ ylim(0.5,1)
-
 # Seconde year - No Sibilings
 ggplot(df_mdl, aes(DOB, gam2)) + geom_smooth(aes(col = covid_time)) + geom_line(aes(DOB, mdl2_avg, col = covid_time)) + 
   design + labs(title = 'Atopic disease risk for 1-2 year old babies by DOB', x = 'Date of Birth', y = 'Atopic disease probability') +
   scale_color_manual(values=viridis(4), name = "Born at", labels =c('Up to March19','March19 - March20','March20 - Feb21', 'From Feb21' ))+ ylim(0.5,1)
-
-# # Seconde year - With Sibilings
-# ggplot(df_mdl, aes(DOB, gam2_sib)) + geom_smooth(aes(col = covid_time)) + geom_line(aes(DOB, mdl2_sib_avg, col = covid_time)) + 
-#   design + labs(title = 'Atopic disease risk for 1-2 year old babies by DOB - WITH SIBILINGS', x = 'Date of Birth', y = 'Atopic disease probability') +
-#   scale_color_manual(values=viridis(4), name = "Born at", labels =c('Up to March19','March19 - March20','March20 - Feb21', 'From Feb21' )) + ylim(0.5,1)
-```
-```{r}
-plot(gam1)
-```
-```{r}
-plot(df_mdl$DOB, predict(gam1), )
-
 ```
 
 
 ```{r}
-design = theme_bw() 
+plot(df_mdl$DOB, predict(gam1))
+```
 
+
+```{r}
 # First year - No Sibilings
 ggplot(df_mdl, aes(DOB, gam1)) + geom_smooth() + geom_line(aes(DOB, mdl1_avg, col = covid_time)) + 
   design + labs(title = 'Atopic disease risk for babies up to one year old by DOB', x = 'Date of Birth', y = 'Atopic disease probability') +
   scale_color_manual(values=viridis(4), name = "Born at", labels =c('Up to March19','March19 - March20','March20 - Feb21', 'From Feb21' ))+ ylim(0.5,1)
 
-
 # Seconde year - No Sibilings
 ggplot(df_mdl, aes(DOB, gam2)) + geom_smooth() + geom_line(aes(DOB, mdl2_avg, col = covid_time)) + 
   design + labs(title = 'Atopic disease risk for 1-2 year old babies by DOB', x = 'Date of Birth', y = 'Atopic disease probability') +
   scale_color_manual(values=viridis(4), name = "Born at", labels =c('Up to March19','March19 - March20','March20 - Feb21', 'From Feb21' ))+ ylim(0.5,1)
-
-
 ```
 
-
-
-
-נקודות שמיכה אמר בפגישה :
-
-צריך להסתגל על הגרף של האוד רשיו ולא על הגרף של ההסבתרות כי הוא תלוי גם במשתנים האחרים 
